添加'右下角带icon的圆形头像'CircleImageViewWithIcon

--- a/widgets/src/main/res/values/attrs.xml
+++ b/widgets/src/main/res/values/attrs.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <!-- 带icon的圆形图标-->
+    <declare-styleable name="CircleImageViewWithIcon">
+        <attr name="largeImageSrc" format="reference|integer"/>
+        <attr name="smallImageSrc" format="reference|integer"/>
+    </declare-styleable>
 
 </resources>
