--- a/widgets/src/main/res/layout/activity_main.xml
+++ b/widgets/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
 
     <com.tuke.demo.widgets.CombinationImageView
+        android:id="@+id/combination_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
